Don't fire onchange events twice when clicking on an input.  Bug 254238, r=bzbarsky, sr=jst, a=asa.